unpackaged/main/default/objects/Account/fields/Account_Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Meeting_Notes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting Notes</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>