unpackaged/main/default/objects/Account/fields/Activated_Partner_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Activated_Partner_Agreement__c</fullName>
    <formula>TODAY() &lt; Activated_Partner_Agreement_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activated Partner Agreement</label>
    <type>Checkbox</type>
</CustomField>