unpackaged/main/default/objects/Account/fields/Activated_Partner_Agreement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Activated_Partner_Agreement_End_Date__c</fullName>
    <description>The end date of a currently active contract associated with this Account</description>
    <inlineHelpText>The end date of a currently active contract associated with this Account</inlineHelpText>
    <label>Activated Partner Agreement End Date</label>
    <type>Date</type>
</CustomField>