unpackaged/main/default/objects/Account/fields/churn_risk__c.field-meta.xml
<CustomField>
    <fullName>churn_risk__c</fullName>
    <label>Churn Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Churn_Risk_Stage</valueSetName>
    </valueSet>
</CustomField>