unpackaged/main/default/objects/Account/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <formula>IF( ISNULL( NumberOfEmployees ), '',
  IF(NumberOfEmployees &lt;= 100, '0-100',
    IF (NumberOfEmployees &lt;= 500, '101-500',
      IF (NumberOfEmployees &lt;= 1000, '501-1000', 
        IF(NumberOfEmployees &lt;= 5000, '1001-5000', 
          IF(NumberOfEmployees &lt;= 10000, '5001-10000',
            IF(NumberOfEmployees &lt;= 25000, '10001-25000', '25001+')
          )
        )
      )
    )
  )
)</formula>
    <inlineHelpText>Banding derived from Employees</inlineHelpText>
    <label>Company Size</label>
    <type>Text</type>
</CustomField>