unpackaged/main/default/objects/Account/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the CSM that is assigned to the account, working with the account owner to make this customer successful</description>
    <inlineHelpText>This is the CSM that is assigned to the account, working with the account owner to make this customer successful</inlineHelpText>
    <label>CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>