unpackaged/main/default/objects/Account/fields/DevOps_TAM_Reached__c.field-meta.xml
<CustomField>
    <fullName>DevOps_TAM_Reached__c</fullName>
    <description>Calculation of available licenses on team divided by number of people making changes to Salesforce in the team, returning a % calculation. </description>
    <formula>Gearset_Team__r.Licenses_available__c  /  Number_of_people_making_changes_to_SF__c</formula>
    <label>% DevOps TAM Reached</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>