unpackaged/main/default/objects/Account/fields/Discovery_Notes__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Notes__c</fullName>
    <inlineHelpText>Notes taken during the triaging process</inlineHelpText>
    <label>Discovery Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>