unpackaged/main/default/objects/Account/fields/Gearset_Team__c.field-meta.xml
<CustomField>
    <fullName>Gearset_Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Gearset Team</label>
    <referenceTo>Gearset_Team__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>