unpackaged/main/default/objects/Account/fields/Gong__Gong_Count__c.field-meta.xml
<CustomField>
    <fullName>Gong__Gong_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gong Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>