unpackaged/main/default/objects/Account/fields/Growth_Maintenance_Account__c.field-meta.xml
<CustomField>
    <fullName>Growth_Maintenance_Account__c</fullName>
    <description>Focus for the account; either maintenance or growth depending on TAM</description>
    <label>Growth / Maintenance Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Growth Account</fullName>
            </value>
            <value>
                <fullName>Maintenance Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>