unpackaged/main/default/objects/Account/fields/How_they_currently_use_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>How_they_currently_use_Salesforce__c</fullName>
    <inlineHelpText>Discovery notes on how they used Salesforce</inlineHelpText>
    <label>How they currently use Salesforce</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>