unpackaged/main/default/objects/Account/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <label>MRR</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>