unpackaged/main/default/objects/Account/fields/No_of_SF_Devs__c.field-meta.xml
<CustomField>
    <fullName>No_of_SF_Devs__c</fullName>
    <label>No of SF Devs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>