unpackaged/main/default/objects/Account/fields/Number_of_people_making_changes_to_SF__c.field-meta.xml
<CustomField>
    <fullName>Number_of_people_making_changes_to_SF__c</fullName>
    <description>Number of devs and admins making changes to Salesforce</description>
    <label>Number of people making changes to SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>