unpackaged/main/default/objects/Account/fields/Number_of_SF_End_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_SF_End_Users__c</fullName>
    <description>Number of Salesforce end users linked to this account</description>
    <label>Number of SF End Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>