unpackaged/main/default/objects/Account/fields/NumberOfSFUsers__c.field-meta.xml
<CustomField>
    <fullName>NumberOfSFUsers__c</fullName>
    <label>No. of Salesforce end users</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>