unpackaged/main/default/objects/Account/fields/Onboarding_Manager__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.DeveloperName</field>
            <operation>equals</operation>
            <value>Onboarding_Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>