unpackaged/main/default/objects/Account/fields/Processes_and_environments__c.field-meta.xml
<CustomField>
    <fullName>Processes_and_environments__c</fullName>
    <inlineHelpText>What processes were in place during the discovery phase along with updates</inlineHelpText>
    <label>Processes and environments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>