unpackaged/main/default/objects/Account/fields/Publicly_Listed__c.field-meta.xml
<CustomField>
    <fullName>Publicly_Listed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the company for this account is publicly listed</description>
    <inlineHelpText>Will set the segment to Enterprise if ticked.</inlineHelpText>
    <label>Publicly Listed</label>
    <type>Checkbox</type>
</CustomField>