unpackaged/main/default/objects/Account/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <description>Calculate the region based off the country the user signed up from.</description>
    <formula>CASE(1,
IF (ISBLANK(TEXT(Sign_in_Country__c)), 1, 0), &quot;&quot;,
IF (CONTAINS($Label.Countries_Region_AMER, TEXT(Sign_in_Country__c) + &quot;;&quot;), 1, 0), &quot;AMER&quot;,
IF (CONTAINS($Label.Countries_Region_EMEA, TEXT(Sign_in_Country__c) + &quot;;&quot;), 1, 0), &quot;EMEA&quot;,
IF (CONTAINS($Label.Countries_Region_APAC, TEXT(Sign_in_Country__c) + &quot;;&quot;), 1, 0), &quot;APAC&quot;,
IF (CONTAINS($Label.Countries_Region_Other, TEXT(Sign_in_Country__c) + &quot;;&quot;), 1, 0), &quot;Other&quot;,
&quot;Unknown&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculate the region based off the country the user signed up from.</inlineHelpText>
    <label>Sales Region</label>
    <type>Text</type>
</CustomField>