unpackaged/main/default/objects/Account/fields/Show_Partner_Portal__c.field-meta.xml
<CustomField>
    <fullName>Show_Partner_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dictates whether the partner portal should be visible for this account.</description>
    <inlineHelpText>Dictates whether the partner portal should be visible for this account.</inlineHelpText>
    <label>Show Partner Portal</label>
    <type>Checkbox</type>
</CustomField>