unpackaged/main/default/objects/Account/fields/Sign_in_Country__c.field-meta.xml
<CustomField>
    <fullName>Sign_in_Country__c</fullName>
    <description>The country retrieved from the lead&#39;s IP address when they sign-up, converted from the lead.</description>
    <inlineHelpText>The country retrieved from the lead&#39;s IP address when they sign-up, converted from the lead.</inlineHelpText>
    <label>Sign-in Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>