unpackaged/main/default/objects/Account/fields/Team_Structure__c.field-meta.xml
<CustomField>
    <fullName>Team_Structure__c</fullName>
    <label>Team Structure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>