unpackaged/main/default/objects/Account/listViews/All_Implementation_Partners_Customers.listView-meta.xml
<ListView>
    <fullName>All_Implementation_Partners_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>churn_risk__c</columns>
    <columns>MRR__c</columns>
    <columns>Gearset_Team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gearset_Team__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Implementation Partner</value>
    </filters>
    <label>All Implementation Partners - Customers</label>
</ListView>