unpackaged/main/default/objects/Account/listViews/All_paying_accounts.listView-meta.xml
<ListView>
    <fullName>All_paying_accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>churn_risk__c</columns>
    <columns>MRR__c</columns>
    <columns>Gearset_Team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gearset_Team__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All paying accounts</label>
</ListView>