unpackaged/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Gearset_Team__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>MRR__c</columns>
    <columns>churn_risk__c</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>