unpackaged/main/default/objects/Account/listViews/My_Churn_Accounts.listView-meta.xml
<ListView>
    <fullName>My_Churn_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>churn_risk__c</field>
        <operation>equals</operation>
        <value>Onboarding,Ramped,Churn Risk - Attempting Contact,Churn Risk - In Discussion,Churned</value>
    </filters>
    <label>My Churn Accounts</label>
</ListView>