unpackaged/main/default/objects/Account/listViews/Org_Account_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Account_Hierarchy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>MRR__c</columns>
    <columns>Gearset_Team__c</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Account_Hierarchy</label>
</ListView>