unpackaged/main/default/objects/Account/listViews/Prospect_Accounts.listView-meta.xml
<ListView>
    <fullName>Prospect_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Gearset_Team__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Prospect - Standard Customer</value>
    </filters>
    <filters>
        <field>ACCOUNT.LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Prospect Accounts</label>
</ListView>